==================================
Rilascio v2.0.0    del 15/06/2016
==================================

ryLabel: aggiunte le proprietà "align" e "color".

ryDraw: aggiunto border a ryPie e gestito background in ryGram.

ryScript: aggiunto il metodo "refresh"; corretto il funzionamento dell'intellisense.

ryUnbound: migliorato il comportamento dell'editmode.

QVUSERS, QVROLES: aggiunto il campo REGISTRY.

ryFamily: corretto il comportamento alla focus.

==================================
Rilascio 1.70.28    del 06/04/2016
==================================

ryDraw: generazione dei colori per tonalità nei grafici a torta.

==================================
Rilascio 1.70.27    del 04/04/2016
==================================

ryUnbound: corretto lo scroll orizzontale con editmode abilitato.

ryWinz: riportato il titolo sull'MDI per i form senza barra (top) dei controlli.

ryDraw: implementato il grafico a torta.

==================================
Rilascio 1.70.26    del 28/03/2016
==================================

Perfezionato il comportamnto di RYWINZ.Abort().

Utilizzato RYWINZ.Post() in tutto Cambusa / Corsaro.

Nuova gestione dei messaggi d'avanzamento.

==================================
Rilascio 1.70.25    del 20/03/2016
==================================

ryQue e ryUnbound: aggiunti pulsanti per lo scroll orizzontale mediante mouse.

==================================
Rilascio 1.70.24    del 17/03/2016
==================================

ryQue e ryUnbound: aggiunti pulsanti per lo scroll verticale mediante mouse.

==================================
Rilascio 1.70.23    del 15/03/2016
==================================

DialogBox: possibilità di definirle in modo statico.

Introdotta la cancellazione dei contenuti mediante crocetta per tutti i controlli.

ryBox: costruttore di menù contestuali.

==================================
Rilascio 1.70.22    del 13/03/2016
==================================

ryLabel: introdotto l'autocoding anche per le etichette.
